@@ -344,8 +344,8 @@ late-header-c
     CTYPE a = PVM_VAL_##TYPE (JITTER_UNDER_TOP_STACK ());                    \
     CTYPE b = PVM_VAL_##TYPE (JITTER_TOP_STACK ());                          \
     int size = PVM_VAL_##TYPE##_SIZE (JITTER_TOP_STACK ());                  \
-    int64_t a64 = ((int64_t) a << (64 - size));                              \
-    int64_t b64 = ((int64_t) b << (64 - size));                              \
+    int64_t a64 = ((uint64_t)(int64_t) a) << (64 - size);                    \
+    int64_t b64 = ((uint64_t)(int64_t) b) << (64 - size);                    \
                                                                              \
     if (INT_ADD_OVERFLOW (a64, b64))                                         \
       PVM_RAISE_DFL (PVM_E_OVERFLOW);                                        \
@@ -364,8 +364,8 @@ late-header-c
     CTYPE a = PVM_VAL_##TYPE (JITTER_UNDER_TOP_STACK ());                    \
     CTYPE b = PVM_VAL_##TYPE (JITTER_TOP_STACK ());                          \
     int size = PVM_VAL_##TYPE##_SIZE (JITTER_TOP_STACK ());                  \
-    int64_t a64 = ((int64_t) a << (64 - size));                              \
-    int64_t b64 = ((int64_t) b << (64 - size));                              \
+    int64_t a64 = ((uint64_t)(int64_t) a) << (64 - size);                    \
+    int64_t b64 = ((uint64_t)(int64_t) b) << (64 - size);                    \
                                                                              \
     if (INT_SUBTRACT_OVERFLOW (a64, b64))                                    \
       PVM_RAISE_DFL (PVM_E_OVERFLOW);                                        \
@@ -384,7 +384,7 @@ late-header-c
     CTYPE a = PVM_VAL_##TYPE (JITTER_UNDER_TOP_STACK ());                    \
     CTYPE b = PVM_VAL_##TYPE (JITTER_TOP_STACK ());                          \
     int size = PVM_VAL_##TYPE##_SIZE (JITTER_TOP_STACK ());                  \
-    int64_t a64 = ((int64_t) a << (64 - size));                              \
+    int64_t a64 = ((uint64_t)(int64_t) a) << (64 - size);                    \
                                                                              \
     if (INT_MULTIPLY_OVERFLOW (a64, b))                                      \
       PVM_RAISE_DFL (PVM_E_OVERFLOW);                                        \
