@@ -1,3 +1,15 @@
+2023-01-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/ios.c (ios_read_int): Avoid UB in signed left shifts,
+	and overflows in unsigned left shifts.
+	* libpoke/pvm-val.h (PVM_VAL_INT): Likewise.
+	(PVM_MAKE_INT): Likewise.
+	(PVM_MAKE_UINT): Likewise.
+	(PVM_VAL_LONG): Likewise.
+	* libpoke/pvm.jitter (PVM_ADD_SIGNED): Likewise.
+	(PVM_SUB_SIGNED): Likewise.
+	(PVM_MUL_SIGNED): Likewise.
+
 2023-01-23  Arsen Arsenović  <arsen@aarsen.me>
 
 	* doc/poke.texi (Exceptions): Fix typo in the E_no_return
